Use ENV for database username

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: timecrowpo_production
-  username: timecrowpo
+  username: <%= ENV['TIMECROWPO_DATABASE_USERNAME'] %>
   password: <%= ENV['TIMECROWPO_DATABASE_PASSWORD'] %>
